# Inverse-Objective-Regulator

./: MERD_inverse_regulator.md  README.md  pyproject.toml  trajectory.schema.json
ior/: __init__.py  cli.py  evaluation.py  json_utils.py
ior/divergence/: __init__.py  locator.py
ior/execution/: __init__.py  executor.py
ior/gym/: __init__.py  harness.py
ior/gym/agents/: __init__.py  cost_minimiser.py  faithful_answerer.py  multi_agent_pair.py  tool_maximiser.py
ior/inference/: __init__.py  birl.py  birl_mcmc.py  ensemble.py  features.py  featuriser.py  gdj.py  structural.py
ior/ingest/: __init__.py  trajectory.py
ior/reporting/: __init__.py  reporter.py
ior/scoring/: __init__.py  scorer.py
ior/targeting/: __init__.py  probe_targeter.py
paper/: .gitignore  README.md  baseline_results.json  featuriser_ablation.json  main.tex  outline.md  references.bib  section3.md  section5.md
paper/sections/: 00-abstract.tex  01-introduction.tex  02-related-work.tex  03-problem-formulation.tex  04-architecture.tex  05-inference.tex  06-divergence-targeting.tex  07-gym.tex  08-evaluation.tex  09-limitations.tex  10-conclusion.tex
scripts/: run_baseline.py  run_featuriser_ablation.py
tests/: test_birl.py  test_divergence.py  test_ensemble.py  test_evaluation.py  test_executor.py  test_gym_agents.py  test_harness.py  test_json_utils.py  test_mcmc.py  test_reporter.py  test_structural.py  test_trajectory.py
