[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inverse-regulator"
version = "0.1.0"
requires-python = ">=3.11"
# Run tests with: python3.11 -m pytest
dependencies = [
    "anthropic>=0.40.0",
    "numpy>=2.0",
    "scipy>=1.13",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.hatch.build.targets.wheel]
packages = ["ior"]
